# flowix

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  package-lock.json  package.json  tailwind.config.js  test.json  tsconfig.json  vite.config.ts  vitest.config.ts  还有几类加载性能问题没处理，按影响排序.md
app/: Cargo.toml  libflowix_anthropic_check.rlib
app/.cargo/: config.toml
app/backend/: tauri.conf.json
app/backend/icons/: icon.icns
app/backend/src/: commands.rs  lib.rs  memo_file.rs
app/flowix-cli/: Cargo.toml
app/flowix-cli/src/: cli.rs  dispatch.rs  errors.rs  fmt.rs  lib.rs  main.rs  mcp.rs  output.rs  paths.rs  serve.rs  store.rs
app/flowix-cli/tests/: cli_smoke.rs  mcp_e2e.rs  serve_e2e.rs
app/flowix-core/: Cargo.toml
app/flowix-core/resources/welcome/: Welcome.md  欢迎文档.md
app/flowix-core/src/: lib.rs  search.rs  service.rs
app/flowix-core/src/memo_file/: content.rs  derivation.rs  frontmatter.rs  index_store.rs  mod.rs  notebook.rs  onboarding.rs  ops.rs  registration.rs  tests.rs  time.rs  types.rs  versions.rs
app/flowix-core/src/secret/: mod.rs  tests.rs
app/flowix-desktop/: .gitignore  Cargo.toml  Info.plist  com.flowix.app  entitlements.plist  tauri.conf.dev.json  tauri.conf.json  tauri.conf.production.json  tauri.conf.production.local.json  tauri.macos.conf.json  tauri.windows.conf.json  tauri.windows.dev.conf.json  多Agent并行ThreadCard流式展示PRD.md
app/flowix-desktop/capabilities/: default.json
app/flowix-desktop/icons/: icon.icns
app/flowix-desktop/nsis/: flowix-cli-path.nsh
app/flowix-desktop/resources/welcome/: Flowix Memo 可以做什么？.md  功能介绍：如何快速上手.md  配置使用 Claude Code   Codex   Hermes 或 内置AI Agent.md
app/flowix-desktop/src/: agent.rs  agent_access.rs  agent_external_config.rs  agent_types.rs  claude_cli.rs  claude_history.rs  cli_link.rs  codex_cli.rs  codex_history.rs  device_registration.rs  events.rs  external_run.rs  fs_watcher.rs  global_meta_data.rs  hermes_cli.rs  hermes_history.rs  lib.rs  lock_utils.rs  main.rs  memo_events.rs  path_scope.rs  process_window.rs  runtime_log.rs  security_bookmark.rs  simple_cli.rs  system_data.rs  threads.rs  user_config.rs  window_chrome.rs
app/flowix-desktop/src/agent/: context.rs  factory.rs  persistence.rs  provider.rs  state.rs  stream.rs  tests.rs  tools.rs  wire.rs
app/flowix-desktop/src/agent_external/: cli_resolver.rs  mod.rs  node.rs  shared.rs
app/flowix-desktop/src/agent_flowix/: context.rs  factory.rs  mod.rs  persistence.rs  provider.rs  state.rs  stream.rs  tests.rs  tool_runtime.rs  wire.rs
app/flowix-desktop/src/agent_session/: error.rs  mod.rs  store.rs  tests.rs  types.rs
app/flowix-desktop/src/app/: bootstrap.rs  mod.rs  panic.rs  paths.rs  search_index.rs  state.rs  watchdog.rs
app/flowix-desktop/src/codex/: events.rs  io.rs  mod.rs  runtime.rs  session.rs
app/flowix-desktop/src/commands/: agent.rs  agent_access.rs  cli.rs  dialog.rs  external_document.rs  external_document_watch.rs  file.rs  font.rs  helpers.rs  kv.rs  memo.rs  mod.rs  notebook.rs  product.rs  settings.rs  tab_window.rs  tag.rs  thread.rs  web.rs  window.rs
app/flowix-desktop/src/config/: access.rs  mod.rs  path_scope.rs  security_bookmark.rs  user.rs
app/flowix-desktop/src/external_runtime/: binary.rs  cli_resolver.rs  mod.rs  node.rs  shared.rs
app/flowix-desktop/src/open_target/: handler.rs  mod.rs  parser.rs  resolver.rs
app/flowix-desktop/src/prompt/: base.rs  behavior.rs  mod.rs  role.rs  skills.rs  tools.rs
app/flowix-desktop/src/providers/: deepseek.rs  mod.rs  openai_compatible.rs  test_streaming.rs
app/flowix-desktop/src/session/: mod.rs  store.rs  tests.rs  types.rs
app/flowix-desktop/src/skills/: mod.rs  parser.rs  scanner.rs  seed.rs
app/flowix-desktop/src/watcher/: dispatcher.rs  event.rs  manager.rs  mod.rs  path.rs  processor.rs  runtime.rs  tombstone.rs  whitelist.rs
app/flowix-web/: App.tsx  index.html  main.tsx
app/flowix-web/app/: App.tsx  agent-window-effects.test.ts  agent-window-effects.tsx  app.tsx  fixed-note-window.tsx  main-window-effects.tsx  main-window-memo-event-handler.test.ts  main-window-memo-event-handler.ts  main.tsx  user-config-sync.test.ts  user-config-sync.ts
app/flowix-web/app/tab-window/: memo-tab-adapter.ts  tab-activation-coordinator.test.ts  tab-activation-coordinator.ts  tab-content.tsx  tab-strip.tsx  tab-tear-off.test.ts  tab-tear-off.ts  tab-window-store.test.ts  tab-window-store.ts  tab-window.tsx
app/flowix-web/components/: error-boundary.tsx  windows-titlebar-controls.tsx
app/flowix-web/components/editor/: markdown-editor.tsx
app/flowix-web/components/icons/: sidebar-toggle-icon.tsx
app/flowix-web/components/ui/: aitextarea.tsx  assets.d.ts  button.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  kbd-chord.tsx  kbd.tsx  popover.tsx  select.tsx  shortcut-kbd.tsx  shortcut-recorder.tsx  textarea.tsx  tooltip.tsx
app/flowix-web/css/: editor-agent-thread-card.css  editor-attachment-link.css  editor-bubble-menus.css  editor-code-block.css  editor-link-tooltip.css  editor-note-reference.css  editor.css  fonts.css  index.css
app/flowix-web/css/theme/: dark.css  (+2 more)
app/flowix-web/lib/: agent-roles.ts  agent-types.ts  constants.ts  document-navigation.ts  error-message.ts  event-dispatcher.ts  export-utils.ts  export.ts  memo-dispatcher-dedup.ts  memo-dispatcher.test.ts  memo-dispatcher.ts  path.ts  toast.tsx  utils.ts
app/flowix-web/public/: theme-boot.js
app/flowix-web/shared/: error-boundary.tsx  window-titlebar-controls.tsx
app/flowix-web/styles/: document-markmap.css  editor-agent-thread-card.css  editor-attachment-link.css  editor-bubble-menus.css  editor-code-block.css  editor-frontmatter.css  editor-link-tooltip.css  editor-mermaid.css  editor-note-reference.css  editor.css  fonts.css  index.css  overlay-scrollbar.css
app/flowix-web/types/: agent.ts  index.ts  memo-item.ts  memo.ts
app/frontend/: App.tsx
app/frontend/css/: agent-message.css  index.css
app/frontend/hooks/: index.ts  useMemoInsertAnimation.ts
app/frontend/lib/: export.ts
(+804 files in other folders)
