[package]
name = "flowix-desktop"
version = "0.1.0"
description = "Flowix - AI Note Taking App"
authors = ["you"]
edition = "2021"
default-run = "flowix-desktop"

[lib]
name = "flowix_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flowix-core = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
glob = "0.3"
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
thiserror = { workspace = true }
rllm = { version = "1.1", features = ["openai", "anthropic", "deepseek"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
base64 = "0.22"
nanoid = { workspace = true }
tempfile = { workspace = true }
dunce = { workspace = true }
uuid = { workspace = true }
